2008-10-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/highlighting.c:
   Fix regression: clear all styles for filetype None to not break
   the 'invert_all' option.


2008-10-12  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * src/search.c:
   Change of a typo in singular form of some status messages. Thanks to
   Jeff Bailes for reporting.


2008-10-10  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/editor.c:
   Fix Ctrl-click on a word when Numpad is enabled.
 * src/dialog.c:
   Make a some labels in the File Properties dialog selectable.


2008-10-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * plugins/splitwindow.c:
   Fix only updating filename label after saving the relevant document.


2008-10-07  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * plugins/filebrowser.c, plugins/htmlchars.c, src/editor.c,
   src/msgwindow.c, src/plugins.c, src/prefs.c, src/treeviews.c:
   Plug some memory leaks due to some missing g_object_unref's.
 * src/editor.c:
   Fix wrong cursor positioning while line breaking when the last
   character on the line was a space.
 * src/wscript:
   Add missing 'mandatory' attribute for the GTK check.
   Change build directory to '_build_'.
 * geany.glade, src/interface.c:
   Reorder Help menu items (swap 'Keyboard Shortcuts' and 'Website').


2008-10-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * plugins/splitwindow.c:
   Add toolbar with Refresh button to sync to the current document, and
   an Unsplit button (reuses existing string).
 * src/editor.c:
   Fix segfault when holding Alt and scrolling editor window.
 * plugins/splitwindow.c:
   Use EditWindow structure instead of separate global variables.
 * plugins/splitwindow.c:
   Fix segfault when clicking on split window after the original
   document has been closed and the view has been refreshed to another
   document.
 * plugins/splitwindow.c:
   Refactor with set_editor().
 * plugins/splitwindow.c: